frontend/.kube/servidor/03-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: aplicacioncilla
spec:
  selector:
    matchLabels:
      aplicacion: frontend
  replicas: 5
  template:
    metadata:
      labels:
        aplicacion: frontend
    spec:
      containers:
        - name: api-arroz
          image: ggmartinez/frontend
          ports:
            - containerPort: 80
