frontend/.kube/servidor/04-Services.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: aplicacioncilla
spec:
  selector:
    aplicacion: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
